# STORYTALE

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.cursor/: ux-ui-review-report.md
.cursor/agents/: ux-ui-reviewer.md
.cursor/rules/: ssh-cli-usage.mdc
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/db/: __init__.py  database.py  repository.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  pollinations.py  story_service.py  tts.py  video_export.py
docs/: DEPLOY-RENDER.md  POLLINATIONS-SHOWCASE-SUBMISSION.md
mobile/: README.md  main.py  requirements.txt
mobile/recipes/pyjnius/: __init__.py  py3_long_fix.patch
scripts/: ssh-cli-run.js
web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts  types.ts
web/src/components/icons/: HomeIcons.tsx
web/src/context/: LangContext.tsx
web/src/pages/: Home.tsx  StoryList.tsx  StoryView.tsx
