[project]
name = "storytell-backend"
version = "0.1.0"
description = "STORYTELL API - AI story + image generation"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "edge-tts>=7.0.0",
    "moviepy>=1.0.3",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.uv]
dev-dependencies = []
